# BDI_LLM_Formal_Ver

./: .env.example  .env.test  .env.test.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .ralph_env.sh  .ralphrc  AGENTS.md  CLAUDE.md  Dockerfile  EVALUATION_REPORT.md  GEMINI.md  INSTINCT_RECOMMENDATIONS.md  LICENSE  LLM_DEMO_RESULTS.md  PARALLEL_FAILURE_ANALYSIS.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PLAN.md  PR21_FIXES.md  PROJECT_OVERVIEW.md  RALPH_LOOP_SUMMARY.md  RALPH_SETUP.md  README.md  README_CN.md  RESULTS_PROVENANCE.md  STATE_SUMMARY.md  add_symbolic_verification.py  analyze_parallel_failure.py  demo_llm_autorepair.py  jules_awaiting.txt  monitor_ralph.sh  patch.diff  patch2.diff  planbench_comparison_results.json  planner.py  progress.txt  pyproject.toml  requirements.txt  run_evaluation.py  (+13 more)
.claude/: allowed_apis_reference.md  plan.md  ralph-loop.local.md  settings.json  settings.local.json
.ralph/: .circuit_breaker_state  .last_reset  .loop_start_sha  .ralph_session  .ralph_session_history  AGENT.md  PROMPT.md  fix_plan.md  progress.json  status.json
.ralphy/: AGENTS.md  HISTORY.md
BDI_Paper/: main.tex  references.bib
C4-Documentation/: c4-component.md  c4-components-detail.md  c4-container.md
bridges2_sbatch_under_review/: aggregate_planbench_glm47flash_paperaligned.sbatch  aggregate_travelplanner_paperaligned.sbatch  bdi_env.env  download_glm47flash.sbatch  install_bdi_llm.sbatch  install_glm47flash_apptainer.sbatch  probe_glm47flash_apptainer.sbatch  psc_apptainer_env.sh  psc_ocean_env.sh  run_eval_glm47flash.sbatch  (+7 more)
conductor/: index.md
(+429 files in other folders)
